# nanox

./: .gitignore  README.md  configure.ac  nanox-config.h.in
doc/: paraver_configs.mk
doc/paraver_configs/cluster/: cluster_wd_offload.cfg
m4/: ax_boost_base.m4  ax_build_versions.m4  ax_check_extrae.m4  ax_check_gasnet.m4  ax_check_memkind.m4  ax_check_resiliency.m4  ax_check_xdma.m4  ax_check_xtasks.m4  ax_cxx_compile_stdcxx_11.m4
src/: Makefile.am  common.am
src/apis/: Makefile.am
src/apis/c/: nanos.h  nanos_atomic.cpp  nanos_instrument.cpp  nanos_memory.cpp  nanos_pe.cpp  nanos_reduction.h  nanos_sys.cpp  nanos_version.def  nanos_wd.cpp
src/apis/error-injection/: mpoison.cpp  nanos-error-injection.cpp  nanos-error-injection.h
src/arch/cluster/: Makefile.am  clusterconfig.cpp  clusterconfig.hpp  clusterdevice_decl.hpp  clustermpiplugin.cpp  clustermpiplugin_decl.hpp  clusternode.cpp  clusternode_decl.hpp  clusterplugin.cpp  clusterplugin_decl.hpp  clusterthread.cpp  clusterthread_decl.hpp  gasnetapi.cpp  gasnetapi_decl.hpp  netwd.cpp  netwd_decl.hpp
src/arch/fpga/: Makefile.am  fpga-api.cpp  fpgaconfig.cpp  fpgaconfig.hpp  fpgadd.cpp  fpgadd.hpp  fpgadevice.cpp  fpgadevice.hpp  fpgadevice_fwd.hpp  fpgainstrumentation.cpp  fpgainstrumentation.hpp  fpgalistener.cpp  fpgalistener.hpp  fpgamemorytransfer.cpp  fpgapinnedallocator.cpp  fpgapinnedallocator.hpp  fpgaplugin.cpp  fpgaprocessor.cpp  fpgaprocessor.hpp  fpgaprocessorinfo.hpp  fpgathread.cpp  fpgathread.hpp  fpgawd.cpp  fpgawd_decl.hpp  fpgaworker.cpp  fpgaworker.hpp  libxdma_wrapper.hpp  libxtasks_wrapper.hpp  nanos-fpga.h
src/arch/gpu/: gpu-api.cpp  gpuconfig.cpp  gpudevice.hpp  gpudevice_decl.hpp  gpuevent.hpp  gpumemorytransfer.cpp  gpumemorytransfer.hpp  gpumemorytransfer_decl.hpp  gpuplugin.cpp  gpuprocessor.hpp  gpuprocessor_decl.hpp  gputhread.cpp  gputhread_decl.hpp  nanos-gpu.h
src/arch/mpi/: mpi-api.cpp  mpidd.hpp  mpidevice_decl.hpp  mpiplugin.cpp  mpiprocessor.cpp  mpiprocessor.hpp  mpiprocessor_decl.hpp  mpiremotenode.cpp  mpithread.cpp  mpithread.hpp  nanos-mpi.h
src/arch/opencl/: nanos-opencl.h  opencl-api.cpp  openclconfig.cpp  opencldevice.hpp  opencldevice_decl.hpp  openclplugin.cpp  openclprocessor.cpp  openclprocessor_decl.hpp  openclthread.cpp  openclthread_decl.hpp
src/arch/smp/: Makefile.am  smpdd.cpp  smpdd.hpp  smpdevice.hpp  smpdevice_decl.hpp  smpplugin.cpp  smpplugin_decl.hpp  smpprocessor.cpp  smpprocessor.hpp  smpthread.cpp  smpthread.hpp  smptransferqueue.hpp  smptransferqueue_decl.hpp
src/arch/spu/: spuprocessor.hpp  sputhread.cpp  sputhread.hpp
src/arch/unix-os/: Makefile.am  osallocator_decl.hpp  pthread.cpp  pthread_decl.hpp
src/core/: .resilience.cpp.swp  .resilience.hpp.swp  .system.cpp.swp  .system.hpp.swp  .workdescriptor.cpp.swp  .workdescriptor.hpp.swp  Makefile.am  addressspace.cpp  addressspace.hpp  addressspace_decl.hpp  asyncthread.cpp  asyncthread.hpp  asyncthread_decl.hpp  backupmanager.cpp  backupmanager.hpp  backupmanager_aux.cpp  backupmanager_decl.hpp  backupprivatecopy.hpp  backupprivatecopy_decl.hpp  basethread.cpp  basethread.hpp  basethread_decl.hpp  cachedregionstatus.hpp  cachedregionstatus_decl.hpp  commutationdepobj_fwd.hpp  copydata.cpp  copydata.hpp  copydata_decl.hpp  dataaccess.hpp  dependableobject.hpp  dependableobject_decl.hpp  dependableobjectwd.cpp  dependenciesdomain.hpp  dependenciesdomain_decl.hpp  deviceops.hpp  deviceops_decl.hpp  globalregt.cpp  globalregt.hpp  globalregt_decl.hpp  instrumentation.cpp  (+67 more)
src/plugins/: Makefile.am
src/plugins/error-injection/: blockaccessinjectionplugin.cpp  blockaccessinjector.hpp  blockaccessplugin.hpp  dummyinjector.hpp  errorinjectionconfiguration.hpp  errorinjectioninterface.hpp  errorinjectionplugin.hpp  errorinjectionpolicy.hpp  errorinjectionthread.hpp  genericerrorinjector.hpp  noinjectionplugin.cpp  periodicinjectionpolicy.hpp  stubinjectionplugin.cpp  stubinjector.hpp  threadinjector.hpp
src/plugins/instrumentation/: extrae.cpp  ompt.cpp
src/plugins/sched/: affinity-ready_sched.cpp  affinity_sched.cpp  bf_sched.cpp  dbf_sched.cpp  mpq_sched.cpp  node_sched.cpp  socket_sched.cpp  versioning_sched.cpp
src/plugins/slicers/: dynamic_for.cpp  guided_for.cpp  static_for.cpp
src/plugins/throttle/: hysteresis_throttle.cpp
src/plugins/worksharing/: static.cpp
src/pms/openmp/: omp_init.cpp
src/support/: Makefile.am  archplugin.cpp  archplugin_decl.hpp  config.cpp  config.hpp  config_decl.hpp  dbmanager.hpp  debug.hpp  debug_decl.hpp  depsregion.hpp  depsregion_decl.hpp  frequency.hpp  frequency_traits.hpp  hwloc_decl.hpp  memoryaddress.hpp  memorymap.cpp  memorymap.hpp  memorymap_decl.hpp  mempage.cpp  mempage.hpp  memtracker_decl.hpp  mpoison.cpp  mpoison.h  mpoison.hpp  mpoisonmanager.cpp  mpoisonmanager.hpp  new.cpp  packer.cpp  plugin.cpp  plugin.hpp  queue.hpp  queue_decl.hpp  simpleallocator.cpp  simpleallocator_decl.hpp  smartpointer.hpp  smpbaseplugin_decl.hpp  vmentry.cpp  vmentry.hpp  xstring.hpp
src/support/errinjection/: accessrights.hpp  blockaccessinjector.hpp  blockedpage.hpp  errorinjectionplugin.hpp  genericerrorinjector.hpp  memorychunk.hpp  mpoison.cpp  mpoison.h  mpoisonmanager.cpp  mpoisonmanager.hpp  threadinjector.hpp  vmentry.cpp  vmentry.hpp
src/support/error-injection/: blockaccessinjector.hpp  errorinjectionconfiguration.hpp  errorinjectioninterface.hpp  errorinjectionplugin.hpp  errorinjectionthread.hpp  errorinjectionthread_decl.hpp  periodicinjectionpolicy.hpp  periodicinjectionpolicy_decl.hpp  periodicinjectionpolicy_fwd.hpp
src/support/errorgen/: Makefile.am  errorgen.cpp  errorgen.hpp
src/support/exception/: checkpointfailure.hpp  exceptiontracer.hpp  executionfailure.hpp  failurestats.cpp  failurestats.hpp  genericexception.cpp  genericexception.hpp  mpierror.hpp  operationfailure.cpp  operationfailure.hpp  restorefailure.hpp  signalexception.cpp  signalexception.hpp  signalinfo.hpp  signaltranslator.hpp
src/support/memory/: blockedpage.hpp  memoryaddress.cpp  memoryaddress.hpp  memorychunk.hpp  memorypage.hpp  memorytracker.hpp
(+19 files in other folders)
